--- a/style.css
+++ b/style.css
@@ -24,3 +24,30 @@ body {
     width: 80%;
     gap: 2rem;
 }
+
+ul {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+li {
+    display: grid;
+    grid-template-columns: 100px 100px 100px 100px 100px;
+    align-items: center;
+}
+
+button {
+    padding: 8px;
+    background-color: rgb(177, 11, 11);
+    color: white;
+    border: 1px solid black;
+
+}
+
+button:hover {
+    cursor: pointer;
+    background-color: rgb(93, 13, 13);
+    transition: .25s;
+}
