--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     overflow: hidden;
+
 }
 
 #title {
@@ -23,6 +24,11 @@ body {
     margin: 0 auto;
     width: 80%;
     gap: 2rem;
+
+
+    @media (max-width : 762px) {
+        flex-direction: column;
+    }
 }
 
 ul {
@@ -36,6 +42,9 @@ li {
     display: grid;
     grid-template-columns: 100px 100px 100px 100px 100px;
     align-items: center;
+    @media (max-width : 762px) {
+        grid-template-columns: 60px 60px 60px 60px 60px;
+    }
 }
 
 button {
