--- a/style.css
+++ b/style.css
@@ -4,12 +4,10 @@ body {
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
-    overflow: hidden;
-
 }
 
 #title {
-    font-size: 50px;
+    font-size: 30px;
 }
 
 #canvas {
@@ -22,13 +20,9 @@ body {
     display: flex;
     align-content: center;
     margin: 0 auto;
-    width: 80%;
     gap: 2rem;
-
-
-    @media (max-width : 762px) {
-        flex-direction: column;
-    }
+    width: 80%;
+    max-height: 800px;
 }
 
 ul {
@@ -36,23 +30,21 @@ ul {
     display: flex;
     flex-direction: column;
     gap: 10px;
+    overflow-y: auto;
+    height: 80%;
 }
 
 li {
     display: grid;
-    grid-template-columns: 100px 100px 100px 100px 100px;
+    grid-template-columns: 100px 100px 100px 100px 100px 100px;
     align-items: center;
-    @media (max-width : 762px) {
-        grid-template-columns: 60px 60px 60px 60px 60px;
-    }
 }
 
 button {
-    padding: 8px;
+    padding: 5px;
     background-color: rgb(177, 11, 11);
     color: white;
     border: 1px solid black;
-
 }
 
 button:hover {
