--- a/style.css
+++ b/style.css
@@ -19,10 +19,11 @@ body {
 .mainSection {
     display: flex;
     align-content: center;
-    margin: 0 auto;
+    /* margin: 0 auto; */
     gap: 2rem;
-    width: 80%;
+    /* width: 80%; */
     max-height: 800px;
+    overflow-x: auto;
 }
 
 ul {
